Fix inconsistent code font sizing on mobile

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -99,6 +99,7 @@ html {
   padding: 0;
   line-height: 1.5;
   font-size: 18px;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1 {
